@@ -1,0 +1,29 @@
+<DL>
+<!-- 
+ ! - <DT>XXX-XX-XX
+ ! - <DD>
+ ! - <UL>
+ ! -   <LI>
+ ! - <P>
+ ! - </LI>
+ ! - </UL>
+  -->
+<DT>XXXX-XX-XX
+<DD>
+<UL>
+<LI>Update existential variables when they are instantiated (as
+far as possible)
+</LI>
+<LI>fix sequent window showing outdated text<P></P>
+</LI>
+</UL>
+
+<DT>2011-04-18
+<DD>
+<UL>
+<LI>first release
+</LI>
+</UL>
+
+
+</DL>
