@@ -1,3 +1,7 @@
+2011-04-20  Hendrik Tews <prooftree@askra.de>
+
+	* prepare changes.html for release
+
 2011-04-20  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* existential variables are now updated (which required
